<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MeditációPortál</string>
    <string name="widget1x1">MeditációPortál 1x1</string>
    <string name="widget4x1">MeditációPortál 4x1</string>
    <string name="url">http://tminfo.hu</string>
    
    <!-- menu -->
    <string name="menuPref">Beállítások</string>
    <string name="menuRefresh">Frissít</string>
    <string name="menuAbout">Névjegy</string>
    <string name="menuShare">Elküld</string>
    <string name="menuReadAll">Mindent elolvas</string>
    
    <!--  about -->
     <string name="aboutDesc1">A MeditációPortál okostelefon-alkalmazás a Transzcendentális Meditációval és Maharishi Védikus Tudományával kapcsolatos cikkeket, híreket szolgáltat magyar és angol nyelven.</string>
     <string name="aboutDesc2">Az alkalmazást – a tminfo.hu megbízásából – a Bankdroid csapat fejlesztette. Amennyiben bármilyen hibát találsz az alkalmazásban, kérjük e-mailben jelezd.</string>
     <string name="aboutDesc3">Az alkalmazás névtelen használati statisztikákat gyűjt a Google Analytics segítségével.</string>
     <string name="aboutUrl1">http://tminfo.hu</string>
     <string name="aboutUrl2">http://bankdroid.googlecode.com</string>
     <string name="aboutBugReportUrl">mailto:android@tminfo.hu</string>
     <string name="aboutIssueListUrl">http://code.google.com/p/bankdroid/issues/list</string>
     <string name="moreBankdroid">További Bankdroid programok</string>
     
     <!-- list view -->
     <string name="listViewTitle">TMINFO.HU</string>
     
     <!-- item view -->
     <string name="shareTitle">MeditációPortál cikk</string>
     <string name="shareBody">\tHello!\nAjánlom figyelmedbe a következő cikket:\n</string>
    
    <!-- synch service -->
    <string name="notificationTitle">MeditációPortál</string>
    <string name="notificationBody">Frissítem az MeditációPortál híreit...</string>
    <string name="notificationBody2">Új cikk érkezett az MeditációPortálról.</string>
    
    <!-- preferences -->
    <string name="prefFeedGroup">Csatornák beállításai</string>
    <string name="prefOtherGroup">Egyéb beállátások</string>
    <string name="prefDevGroup">Fejlesztői opciók</string>
    <string name="prefNoti">Értesítés engedélyezése</string>
    <string name="prefNotiSummary">Értesítések megjelenítése, ha új cikk érkezik</string>
    <string name="prefExp">Meddig tároljam a cikkeket?</string>
    <string name="prefExpSummary">Lejárat után a cikkeket törlöm a helyi tárból.</string>
    <string name="prefFreq">Frissítési gyakoriság</string>
    <string name="prefFreqSummary">Cikkek frissítési gyakoriság</string>
    <string name="prefFeed">Hírforrás kiválasztása</string>
    <string name="prefFeedSummary">Választhatsz a portál hírforrásaiból</string>
    <string name="prefDebug">Fejlesztői értesítések</string>
    <string name="prefDebugSummary">Ha nem tudod mi ez, ne kapcsold be, mert csak zavarna.</string>
    <string name="prefCleanDB">DB űrítés</string>
    <string name="prefCleanDBSummary">Űríti az adatbázis a következő frissítés előtt</string>
    <string name="prefToolbar">Eszköztár</string>
    <string name="prefToolbarSummary">Eszköztár legyen a hagyományos menü helyett.</string>
</resources>
