<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceScreen
		android:title="@string/prefFeedGroup">

		<PreferenceCategory
			android:key="bankdroid.rss.FeedGroup"
			android:title="@string/prefFeedGroup"/>
            
	</PreferenceScreen>
	
	<PreferenceCategory
		android:title="@string/prefOtherGroup">
		
		<ListPreference
			android:title="@string/prefFreq"
			android:summary="@string/prefFreqSummary"
			android:key="bankdroid.rss.Frequency"
			android:defaultValue="60"
			android:entries="@array/freqTitles"
			android:entryValues="@array/freqValues" 
			/>
		<ListPreference
			android:title="@string/prefExp"
			android:summary="@string/prefExpSummary"
			android:key="bankdroid.rss.Expiry"
			android:defaultValue="30"
			android:entries="@array/expTitles"
			android:entryValues="@array/expValues" 
			/>
		<CheckBoxPreference 
			android:title="@string/prefNoti" 
			android:defaultValue="true"
			android:summary="@string/prefNotiSummary" 
			android:key="bankdroid.rss.Notification" 
			/>
		<CheckBoxPreference 
			android:title="@string/prefToolbar" 
			android:defaultValue="true"
			android:summary="@string/prefToolbarSummary" 
			android:key="bankdroid.rss.UseToolbar" 
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/prefDevGroup">
		<CheckBoxPreference 
			android:title="@string/prefDebug" 
			android:defaultValue="false"
			android:summary="@string/prefDebugSummary" 
			android:key="bankdroid.rss.Debug" 
			/>
		<CheckBoxPreference 
			android:title="@string/prefCleanDB" 
			android:defaultValue="false"
			android:summary="@string/prefCleanDBSummary" 
			android:key="bankdroid.rss.CleanDB" 
			/>
	</PreferenceCategory>

</PreferenceScreen>