<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:background="#EFF6D5"
	>

<LinearLayout
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:background="@drawable/itembackground"
  	>
  	
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_marginLeft="15sp" 
		android:layout_marginRight="15sp"
		android:layout_marginTop="20sp" 
		android:layout_height="wrap_content"
		android:background="@android:drawable/editbox_dropdown_light_frame">
		
		<ImageView 
			android:id="@+id/logo" 
			android:layout_width="90sp" 
			android:layout_height="90sp"
			android:scaleType="fitXY"
			android:src="@drawable/logo"
			android:padding="10sp"
			
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			/>

	  	<TextView
	  		android:id="@+id/productId"
	  		android:text="@string/listViewTitle"
	  		android:textSize="28sp"
	  		android:textStyle="bold"
	  		android:textColor="@color/baseTheme"
	  		android:shadowColor="#000"
	  		android:shadowDx="1"
	  		android:shadowDy="1"
	  		android:shadowRadius="1"
	  		
	  		android:layout_height="wrap_content"
	  		android:layout_width="fill_parent"
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@id/logo"
			android:layout_marginTop="5sp"
	  		/>
			
		<TextView 
			android:text="v1.0" 
			android:id="@+id/version" 
			android:textSize="15sp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			
			android:layout_below="@id/productId"
			android:layout_toRightOf="@id/logo"
			/>
			
		<ImageView
			android:id="@+id/divider"
			android:src="@android:drawable/divider_horizontal_bright"
			android:layout_width="fill_parent"
			android:layout_height="2sp"
			android:scaleType="fitXY"			
			android:layout_below="@id/logo"
			/>
			
		<TextView 
			android:text="@string/aboutDesc1" 
			android:id="@+id/description0" 
			android:textSize="13sp"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			android:padding="5sp"
			
			android:layout_below="@id/divider"
			/>
			
		<TextView 
			android:text="@string/aboutDesc2" 
			android:id="@+id/description" 
			android:textSize="13sp"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			android:padding="5sp"
			
			android:layout_below="@id/description0"
			/>
			
		<TextView 
			android:text="@string/aboutDesc3" 
			android:id="@+id/description2" 
			android:textSize="13sp"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			android:padding="5sp"
			
			android:layout_below="@id/description"
			/>
			
		<ImageView
			android:id="@+id/divider2"
			android:src="@android:drawable/divider_horizontal_bright"
			android:layout_width="fill_parent"
			android:layout_height="2sp"
			android:scaleType="fitXY"			
			android:layout_below="@id/description2"
			/>
			
		<TextView 
			android:text="@string/aboutUrl1" 
			android:id="@+id/url1" 
			android:textSize="12sp"
			android:gravity="right"
			android:clickable="true"
			
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingRight="5sp"
			
			android:layout_below="@id/divider2"
			/>
			
		<TextView 
			android:text="@string/aboutUrl2" 
			android:id="@+id/url2" 
			android:textSize="12sp"
			android:gravity="right"
			android:clickable="true"
			
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingRight="5sp"
			
			android:layout_below="@id/url1"
			/>
			
	</RelativeLayout>
		
	
	<Button 
		android:text="@string/moreBankdroid" 
		android:id="@+id/marketSearch" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		
		android:layout_gravity="center_horizontal"
		/>
  	
</LinearLayout>

  </ScrollView>
